# twba.uploader

./: Cargo.toml  Dockerfile  compose.yaml
.cargo/: config.toml
.run/: Dockerfile.run.xml
src/: client.rs  errors.rs  main.rs  prelude.rs
src/client/: data.rs  youtube.rs
src/client/youtube/: auth.rs  data.rs  flow_delegate.rs
